Cambios estilos y readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "nativescript": {
-        "id": "org.nativescript.DigitalAds",
+        "id": "com.digitalads.developer",
         "tns-ios": {
             "version": "5.1.1"
         },
