Cambios en estilos

--- a/App_Resources/Android/settings.json
+++ b/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"org.nativescript.DigitalAds","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"com.digitalads.developer","minSdkVersion":null,"targetSdkVersion":null}
