--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "nativescript": {
-        "id": "com.digitalads.developer",
-        "tns-ios": {
-            "version": "5.1.1"
-        },
-        "tns-android": {
-            "version": "5.3.1"
-        }
+  "nativescript": {
+    "id": "com.digitalads.developer",
+    "tns-ios": {
+      "version": "5.1.1"
     },
-    "description": "Aplicación de Cotización para la empresa Digital ads ",
-    "license": "SEE LICENSE IN <your-license-filename>",
-    "repository": "<fill-your-repository-here>",
-    "dependencies": {
-        "@angular/animations": "~7.1.0",
-        "@angular/common": "~7.1.0",
-        "@angular/compiler": "~7.1.0",
-        "@angular/core": "~7.1.0",
-        "@angular/forms": "~7.1.0",
-        "@angular/http": "~7.1.0",
-        "@angular/platform-browser": "~7.1.0",
-        "@angular/platform-browser-dynamic": "~7.1.0",
-        "@angular/router": "~7.1.0",
-        "nativescript-angular": "~7.1.0",
-        "nativescript-theme-core": "~1.0.4",
-        "nativescript-ui-listview": "^6.1.0",
-        "reflect-metadata": "~0.1.12",
-        "rxjs": "~6.3.0",
-        "tns-core-modules": "^5.3.1",
-        "zone.js": "~0.8.26"
-    },
-    "devDependencies": {
-        "@angular/compiler-cli": "~7.1.0",
-        "@nativescript/schematics": "^0.5.2",
-        "@ngtools/webpack": "~7.1.0",
-        "nativescript-dev-typescript": "~0.7.0",
-        "nativescript-dev-webpack": "~0.19.0"
-    },
-    "gitHead": "9b6565a4513375a33a59c44262dfc1d818a8205e",
-    "readme": "NativeScript Application",
-    "author": "Andrés Salgado / Digital Ads"
+    "tns-android": {
+      "version": "5.4.0"
+    }
+  },
+  "description": "Aplicación de Cotización para la empresa Digital ads ",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "repository": "<fill-your-repository-here>",
+  "dependencies": {
+    "@angular/animations": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/http": "8.0.0-beta.10",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
+    "nativescript-angular": "^8.0.1",
+    "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-listview": "^6.1.0",
+    "reflect-metadata": "~0.1.12",
+    "rxjs": "^6.3.3",
+    "tns-core-modules": "^5.4.2",
+    "zone.js": "^0.8.4",
+    "typescript": "~3.4.5"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "8.0.0",
+    "@nativescript/schematics": "^0.5.2",
+    "@ngtools/webpack": "8.0.0",
+    "nativescript-dev-typescript": "^0.10.0",
+    "nativescript-dev-webpack": "^0.24.1"
+  },
+  "gitHead": "9b6565a4513375a33a59c44262dfc1d818a8205e",
+  "readme": "NativeScript Application",
+  "author": "Andrés Salgado / Digital Ads"
 }
