Nombre del app y elevacion solo android

--- a/App_Resources/Android/settings.json
+++ b/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"com.digitalads.developer","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"com.digitalads.digitalads","minSdkVersion":null,"targetSdkVersion":null}
