--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
         "@angular/platform-browser-dynamic": "8.0.0",
         "@angular/router": "8.0.0",
         "nativescript-angular": "^8.0.1",
+        "nativescript-imagepicker": "^6.2.0",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-ui-listview": "^6.1.0",
         "reflect-metadata": "~0.1.12",
         "rxjs": "^6.3.3",
         "tns-core-modules": "^5.4.2",
-        "zone.js": "^0.8.4",
-        "typescript": "~3.4.5"
+        "typescript": "~3.4.5",
+        "zone.js": "^0.8.4"
     },
     "devDependencies": {
         "@angular/compiler-cli": "8.0.0",
