--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "nativescript-angular": "^8.0.1",
         "nativescript-imagepicker": "^6.2.0",
         "nativescript-theme-core": "~1.0.4",
+        "nativescript-toast": "^2.0.0",
         "nativescript-ui-listview": "7.0.0",
         "reflect-metadata": "~0.1.12",
         "rxjs": "^6.3.3",
