Update Angular dependencies

--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -12,6 +12,9 @@
 android {  
   defaultConfig {  
     generatedDensities = []
+    ndk {
+      abiFilters.clear()
+    }
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
