--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -15,11 +15,30 @@ android {
     ndk {
       abiFilters.clear()
     }
+    splits {
+    abi {
+      enable true //enables the ABIs split mechanism
+      reset() //reset the list of ABIs to be included to an empty string
+      include 'arm64-v8a', 'armeabi-v7a', 'x86'
+      universalApk true
+    }
+  }
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
   }  
 } 
+
+project.ext.abiCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3]
+
+android.applicationVariants.all { variant ->
+    variant.outputs.each { output ->
+        def baseAbiVersionCode = project.ext.abiCodes.get(output.getFilter("ABI"), 0)
+        if (baseAbiVersionCode != null) {
+            output.versionCodeOverride = baseAbiVersionCode * 10000000 + variant.versionCode
+        }
+    }
+}
 
 def settingsGradlePath
 
