--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "nativescript-ui-listview": "7.0.0",
         "reflect-metadata": "~0.1.12",
         "rxjs": "^6.4.0",
-        "tns-core-modules": "6.0.1",
+        "tns-core-modules": "^6.1.1",
         "zone.js": "^0.9.1"
     },
     "devDependencies": {
