--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "~8.2.0",
         "nativescript-angular": "^8.2.1",
         "nativescript-imagepicker": "^6.2.0",
+        "nativescript-material-cardview": "^2.5.0",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-toasty": "^2.0.1",
         "nativescript-ui-listview": "7.0.0",
