--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
         "nativescript-angular": "^8.2.1",
+        "nativescript-appavailability": "^1.3.2",
         "nativescript-imagepicker": "^6.2.0",
         "nativescript-material-cardview": "^2.5.0",
         "nativescript-theme-core": "~1.0.4",
