--- a/App_Resources/iOS/Info.plist
+++ b/App_Resources/iOS/Info.plist
@@ -49,6 +49,12 @@
 	<array>
 		<string>fb</string>
 		<string>twitter</string>
+		<string>instagram</string>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>tel</string>
+		<string>telprompt</string>
 	</array>
 </dict>
 </plist>
