--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "nativescript-angular": "^8.2.1",
         "nativescript-appavailability": "^1.3.2",
         "nativescript-imagepicker": "^6.2.0",
+        "nativescript-mapbox": "^4.4.1",
         "nativescript-material-cardview": "^2.5.0",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-toasty": "^2.0.1",
