--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -19,8 +19,8 @@ android {
       abi {
         enable true //enables the ABIs split mechanism
         reset() //reset the list of ABIs to be included to an empty string
-        include 'arm64-v8a', 'armeabi-v7a', 'x86'
-        universalApk true
+        // include 'arm64-v8a', 'armeabi-v7a', 'x86'
+        // universalApk true
       }
     }
   }  
